feat: add initial letter

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Креативный подход к решению проблем
       </h2>
       <div class="content__text-block">
-        <p class="content__paragraph">
+        <p class="content__paragraph content__text-block_type_first-lettered">
           Творческие кризисы, кажется, рано или поздно испытывает любой человек.
           Часто бывает так, что вы сталкиваетесь с проблемой, не можете решить
           её с первого раза и начинаете думать, что вообще ни на что не
@@ -35,7 +35,7 @@
       </div>
       <h2 class="heading content__title">Что это за колода</h2>
       <div class="content__text-block">
-        <p class="content__paragraph">
+        <p class="content__paragraph content__text-block_type_first-lettered">
           Тут могло бы быть что-то про пользу игры в «Дурака» или о высших
           арканах Таро, но у нас на примете другая колода. Она называется
           Oblique Strategies, или «Обходные стратегии». Первую колоду ещё в 1975
@@ -60,7 +60,7 @@
       </div>
       <h2 class="heading content__title">Как работают «обходные стратегии»</h2>
       <div class="content__text-block">
-        <p class="content__paragraph">
+        <p class="content__paragraph content__text-block_type_first-lettered">
           Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
         </p>
         <blockquote class="content__blockquote">
