feat: add image

--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
           жанра эмбиент Брайан Ино и мультимедиа-художник Питер Шмидт.
         </p>
       </div>
+      <figure class="content__figure">
+        <picture>
+          <source
+            srcset="./images/cards-1x.avif 1x, ./images/cards-2x.avif 2x"
+            type="image/avif"
+          />
+          <source
+            srcset="./images/cards-1x.webp 1x, ./images/cards-2x.webp 2x"
+            type="image/webp"
+          />
+          <img
+            class="content__picture"
+            srcset="./images/cards-1x.png 1x, ./images/cards-2x.png 2x"
+            alt="Колода Oblique Strategies на деревянном столе"
+            loading="lazy"
+          />
+        </picture>
+        <figcaption class="content__picture-caption">
+          <p>Колода Oblique Strategies</p>
+        </figcaption>
+      </figure>
       <div class="content__text-block">
         <p class="content__paragraph">
           Oblique Strategies в основном используют музыканты, но колода подходит
@@ -64,11 +85,13 @@
           Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
         </p>
         <blockquote class="content__blockquote">
-          «Эти карты появились, потому что я оказывался в рабочих ситуациях
-          (особенно в звукозаписывающих студиях), когда из-за паники быстро
-          забывал, что кроме самых очевидных решений были и другие — косвенные.
-          И часто именно такие неочевидные способы выдавали гораздо более
-          интересные результаты, чем решения „в лоб“».
+          <p>
+            «Эти карты появились, потому что я оказывался в рабочих ситуациях
+            (особенно в звукозаписывающих студиях), когда из-за паники быстро
+            забывал, что кроме самых очевидных решений были и другие —
+            косвенные. И часто именно такие неочевидные способы выдавали гораздо
+            более интересные результаты, чем решения „в лоб“».
+          </p>
         </blockquote>
         <p class="content__paragraph">
           Таким образом, колода Ино поощряет нас видеть препятствия не как
@@ -96,8 +119,12 @@
       <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
       <div class="content__text-block">
         <ul class="content__list">
-          <li class="content__list-item">Дэвид Боуи во время записи Берлинской трилогии;</li>
-          <li class="content__list-item">Talking Heads и Дэвид Бирн в сольной карьере;</li>
+          <li class="content__list-item">
+            Дэвид Боуи во время записи Берлинской трилогии;
+          </li>
+          <li class="content__list-item">
+            Talking Heads и Дэвид Бирн в сольной карьере;
+          </li>
           <li class="content__list-item">Coldplay;</li>
           <li class="content__list-item">MGMT.</li>
         </ul>
