--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
           >.
         </p>
       </div>
+      <article class="content__card">
+        <h3 class="content__card-title heading">
+          Use an <span class="colored-text">old idea</span>
+        </h3>
+        <p class="content__card-subtitle">Воспользуйтесь старой идеей</p>
+      </article>
       <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
       <div class="content__text-block">
         <ul class="content__list">
