--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
           <li>
             <button
               class="header__theme-button header__theme-button_type_light header__theme-button_is-active"
-              disabled
             >
               Светлая
             </button>
@@ -162,7 +161,6 @@
       <p class="footer__copyright">VЁRSTKA</p>
     </footer>
 
-    <!-- Раскомментируйте строчку ниже, когда вёрстка будет готова. Если вы назвали все классы. как нужно, переключатель темы будет работать -->
-    <!-- <script src="./scripts/theme-changer.js"></script> -->
+    <script src="./scripts/theme-changer.js"></script>
   </body>
 </html>
